--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <item class="buttons">
             <button class="btn" id="btnAlot">a lot of</button>
-            <button class="btn" id="btnAfew">a few</button>
+            <button class="btn" id="btnAfew">few</button>
             <button class="btn" id="btnMany">many</button>
             
         </item>
